# etrade-asset-cli

./: README.md  app.py  client.py  example.env  portfolio.py  pyproject.toml  spy_strategy.py  strategy_ui.py
templates/: spy_strategy.html
tests/: test_client.py
