[tool.poetry]
name = "etrade-asset-cli"
version = "0.1.0"
description = "An ETrade CLI tool which is used to help calculate various investment metrics based on current account state."
authors = ["awhipp"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1"
pyetrade = "^2"
selenium = "^4.29.0"
flask = "^3.1.1"
flask-cors = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
